# python-udl-interface

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  configure.sh  lsan_supressions.txt  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
cmake/: Config.cmake.in
csv/: cpp_benchmark.csv  cpp_benchmark_16_workers_32_batch.csv  cpp_benchmark_16_workers_64_batch.csv  cpp_benchmark_64_workers_32_batch.csv  python_benchmark.csv
examples/: CMakeLists.txt
examples/add/: main.cpp
examples/add/python_modules/: add.py  tensor_mul.py
examples/multithreaded/: main.cpp  main.py
examples/multithreaded/python_modules/: module_a.py
examples/tensor_share/: main.cpp  main.py
examples/tensor_share/python_modules/: tensor_juggler.py
include/pyscheduler/: library_export.hpp  move_only.hpp  pyscheduler.cpp  pyscheduler.hpp  python_manager.cpp  python_manager.hpp  tensor.hpp
include/pyscheduler/details/: move_only_impl.hpp  pyscheduler_impl.hpp
lib/: blocking_concurrent_queue.hpp  concurrent_queue.hpp  lightweight_semaphore.hpp  python_manager.cpp  python_manager.hpp  utils.hpp
python_models/: add.py  encoder.py  tensor_gen.py
src/: pyscheduler_state.cpp
tests/: CMakeLists.txt  bench_PyManager.cpp  bench_queue_stress.cpp  test_PyManager.cpp  test_plugin_b.cpp
tests/test_modules/: add.py  black_hole.py  dense_matmul.py  identity2.py  raises.py  reflect.py  svd.py
